Adiciona estilos na seção 1 - beneficios (desktop)

--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
   <section class="beneficios">
     <h2>Teste sua aplicação com o Disguise</h2>
     <h3>Facilite o uso de stubs e mocks fornecidos pelo Mountebank Server.</h3>
-    <div>
-      <div>
+    <div class="beneficios-lista">
+      <div class="beneficios-item">
+        <img src="img/ilustra-interfaceAmigavel.svg" alt="Interface Amigável">
         <h4>Interface amigável</h4>
         <p>Feito para tornar o uso do Mountebank Server mais simples para desenvolvedores.</p>
       </div>
-      <div>
+      <div class="beneficios-item">
+        <img src="img/ilustra-configRapida.svg" alt="Configuração Rápida">
         <h4>Configuração rápida</h4>
         <p>Faça download e upload de arquivos para configuração de testes.</p>
       </div>
-      <div>
+      <div class="beneficios-item">
+        <img src="img/ilustra-centralizaInfos.svg" alt="Centralização de Informações">
         <h4>Centralização de informações</h4>
         <p>Encontre as principais funcionalidades para os testes em um único lugar.</p>
       </div>
@@ -44,7 +47,7 @@
   <!-- Beneficios - end -->
 
   <!-- Section 2 - Funcionalidades -->
-  <section>
+  <section class="funcionalidades">
     <h2>Funcionalidades</h2>
     <ul>
       <li>
