Adiciona estilos na seção 2 - funcionalidades (desktop)

--- a/index.html
+++ b/index.html
@@ -49,21 +49,32 @@
   <!-- Section 2 - Funcionalidades -->
   <section class="funcionalidades">
     <h2>Funcionalidades</h2>
-    <ul>
-      <li>
-        <h3>Crie impostores</h3>
-        <p>Configure os stubs e tudo que é necessário para utilizar o Mountebank.</p>
-      </li>
-      <li>
-        <h3>Visualize logs</h3>
-        <p>Acesse todas as mensagens retornadas pelo servidor.</p>
-      </li>
-      <li>
-        <h3>Importação e exportação de arquivos</h3>
-        <p>Faça upload e download de arquivos de configuração JSON.</p>
-      </li>
-    </ul>
-    <img src="img/mockup-newImpostor.png" alt="">
+    <div>
+      <ul>
+        <li>
+          <span class="titulo-funcionalidade">
+            <img src="img/icon-check.svg" alt="">
+            <p>Crie impostores</p>
+          </span>
+          <p>Configure os stubs e tudo que é necessário para utilizar o Mountebank.</p>
+        </li>
+        <li>
+          <span class="titulo-funcionalidade">
+            <img src="img/icon-check.svg" alt="">
+            <p>Visualize logs</p>
+          </span>
+          <p>Acesse todas as mensagens retornadas pelo servidor.</p>
+        </li>
+        <li>
+          <span class="titulo-funcionalidade">
+            <img src="img/icon-check.svg" alt="">
+            <p>Importação e exportação de arquivos</p>
+          </span>
+          <p>Faça upload e download de arquivos de configuração JSON.</p>
+        </li>
+      </ul>
+      <img class="sombra-clara-4" src="img/mockup-newImpostor.png" alt="">
+    </div>
   </section>
   <!-- Funcionalidades - end -->
 
