Adiciona estilos na seção 3 - cta (desktop)

--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
   <!-- Funcionalidades - end -->
 
   <!-- Section 3 - CTA -->
-  <h2>Conheça o Disguise</h2>
-  <p>A maneira mais fácil de utilizar os recursos fornecidos pelo Mountebank Server.</p>
-  <a href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
+  <section class="secao-cta">
+    <h3>Conheça o Disguise</h3>
+    <p>A maneira mais fácil de utilizar os recursos fornecidos pelo Mountebank Server.</p>
+    <a class="btn sombra-escura-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
+  </section>
   <!-- CTA - end -->
 
   <!-- Section 4 - Get Started -->
