--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <img class="logo-disguise" src="/img/logo-disguise.svg" alt="Logo Disguise">
+  <a href="https://opus-software.github.io/disguise/imposters"><img class="logo-disguise" src="/img/logo-disguise.svg" alt="Logo Disguise"></a>
   <div class="welcome">
     <div class="title">
       <h1>Conheça o Disguise</h1>
@@ -19,7 +19,7 @@
       <a class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
     </div>
 
-    <img class="sombra-clara-4" src="/img/mockup-newImpostor.png" alt="New Impostor">
+    <img class="sombra-clara-4" src="/img/imposters.png" alt="New Impostor">
   </div>
 
   <!-- Section 1 - Beneficios -->
@@ -73,7 +73,7 @@
           <p>Faça upload e download de arquivos de configuração JSON.</p>
         </li>
       </ul>
-      <img class="sombra-clara-4" src="img/mockup-newImpostor.png" alt="">
+      <img class="sombra-clara-4" src="img/imposters-stubs.png" alt="">
     </div>
   </section>
   <!-- Funcionalidades - end -->
@@ -82,52 +82,73 @@
   <section class="secao-cta">
     <h3>Conheça o Disguise</h3>
     <p>A maneira mais fácil de utilizar os recursos fornecidos pelo Mountebank Server.</p>
-    <a class="btn sombra-escura-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
+    <a class="btn-2 sombra-escura-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
   </section>
   <!-- CTA - end -->
 
-  <!-- Section 4 - Get Started -->
-  <h2>Como usar o Disguise</h2>
-  <h3>Para utilizar o Desguise, instale o Mountebank Server seguindo os passos abaixo:</h3>
-  <div>
-    <span>
-      <h4>1</h4>
-      <p>Node.js</p>
-      <p>Instale o Node.js Version 12. Para acessar a página de download clique aqui.</p>
-    </span>
-    <span>
-      <h4>2</h4>
-      <p>Mountebank</p>
-      <p>Instale o Mountebank. Para acessar a documentação clique aqui.</p>
-    </span>
-    <span>
-      <h4>3</h4>
-      <p>Impostores</p>
-      <p>Gerencie seus impostores.Com o Mountebank Server em execução, crie e administre impostores e stubs.</p>
-    </span>
-    <span>
-      <h4>4</h4>
-      <p>Logs</p>
-      <p>Visualize os logs.Acesse com facilidade os logs gerados pelo Mountebank Server.</p>
-    </span>
-  </div>
-  <a href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
+  <!-- Section 4 - Como usar -->
+  <section class="como-usar">
+    <h2>Como usar o Disguise</h2>
+    <h3>Para utilizar o Desguise, instale o Mountebank Server seguindo os passos abaixo:</h3>
+    <div class="tutorial">
+      <span>
+        <h4>1</h4>
+        <h5>Node.js</h5>
+        <p>Instale o Node.js Version 12. Para acessar a página de download clique aqui.</p>
+      </span>
+      <span>
+        <h4>2</h4>
+        <h5>Mountebank</h5>
+        <p>Instale o Mountebank. Para acessar a documentação clique aqui.</p>
+      </span>
+      <span>
+        <h4>3</h4>
+        <h5>Impostores</h5>
+        <p>Gerencie seus impostores.Com o Mountebank Server em execução, crie e administre impostores e stubs.</p>
+      </span>
+      <span>
+        <h4>4</h4>
+        <h5>Logs</h5>
+        <p>Visualize os logs.Acesse com facilidade os logs gerados pelo Mountebank Server.</p>
+      </span>
+    </div>
+    <div class="botao">
+      <a class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
+    </div>
+
+
+  </section>
+
   <!-- Section 4 - end -->
 
   <!-- Section 5 - GitHub -->
-  <h2>Seja um colaborador</h2>
-  <p>O Disguise é Open Source! Faça parte desse projeto e nos ajude a desenvolver novas funcionalidades:</p>
-  <a href="https://github.com/Opus-Software/disguise">GitHub</a>
+  <section class="github">
+    <div class="github-titulo">
+      <img src="img/icons-github.svg" alt="GitHub">
+      <h2>Seja um colaborador</h2>
+    </div>
+
+    <p>O Disguise é Open Source! Faça parte desse projeto e nos ajude a desenvolver novas funcionalidades:</p>
+    <a class="btn sombra-clara-4" href="https://github.com/Opus-Software/disguise">GitHub</a>
+  </section>
   <!-- Section 5 - end -->
 
   <!-- footer -->
   <footer>
-    <p>Disguise é um projeto desenvolvido por:</p>
-    <img src="img/logo-opus.svg" alt="Logo Opus Software">
-    <p>Siga-nos</p>
-    <a href=""><img src="img/icons-linkedin.svg" alt="LinkedIn"></a>
-    <a href=""><img src="img/icons-facebook.svg" alt="Facebook"></a>
-    <a href=""><img src="img/icons-twitter.svg" alt="Twitter"></a>
+    <div class="container">
+      <div class="footer-creditos">
+        <p>Disguise é um projeto desenvolvido por:</p>
+        <a href="https://www.opus-software.com.br/"><img src="img/logo-opus.svg" alt="Logo Opus Software"></a>
+      </div>
+      <div class="footer-redes">
+        <p>Siga-nos</p>
+        <div class="links-redes">
+          <a href="https://www.linkedin.com/company/opus-software/"><img src="img/icons-linkedin.svg" alt="LinkedIn"></a>
+          <a href="https://www.facebook.com/Opus.Software"><img src="img/icons-facebook.svg" alt="Facebook"></a>
+          <a href="https://twitter.com/opussoft"><img src="img/icons-twitter.svg" alt="Twitter"></a>
+        </div>
+      </div>
+    </div>
   </footer>
 
 </body>
