Adição dos estilos da seção 2 (mobile)

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <p>Faça upload e download de arquivos de configuração JSON.</p>
         </li>
       </ul>
-      <img class="sombra-clara-4" src="img/imposters-stubs.png" alt="">
+      <img class="sombra-clara-4 img-funcionalidades" src="img/imposters-stubs.png" alt="">
     </div>
   </section>
   <!-- Funcionalidades - end -->
