Corrige caminho das imagens (para github pages)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <a href="https://opus-software.github.io/disguise/imposters"><img class="logo-disguise" src="/img/logo-disguise.svg" alt="Logo Disguise"></a>
+  <a href="https://opus-software.github.io/disguise/imposters"><img class="logo-disguise" src="img/logo-disguise.svg" alt="Logo Disguise"></a>
   <div class="welcome">
     <div class="title">
       <h1>Conheça o Disguise</h1>
@@ -19,7 +19,7 @@
       <a class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
     </div>
 
-    <img class="sombra-clara-4" src="/img/imposters.png" alt="New Impostor">
+    <img class="sombra-clara-4" src="img/imposters.png" alt="New Impostor">
   </div>
 
   <!-- Section 1 - Beneficios -->
