Adiciona plugin de animação

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <title>Disguise Landing Page</title>
 </head>
 
@@ -14,19 +15,19 @@
   <a href="https://opus-software.github.io/disguise/imposters"><img class="logo-disguise" src="img/logo-disguise.svg" alt="Logo Disguise"></a>
   <div class="welcome">
     <div class="title">
-      <h1>Conheça o Disguise</h1>
-      <h2>Uma UI para o Mountebank Server</h2>
-      <a class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
+      <h1 data-anime="400">Conheça o Disguise</h1>
+      <h2 data-anime="800">Uma UI para o Mountebank Server</h2>
+      <a data-anime="1200" class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
     </div>
 
-    <img class="sombra-clara-4" src="img/imposters.png" alt="New Impostor">
+    <img data-anime="1200" class="sombra-clara-4" src="img/imposters.png" alt="New Impostor">
   </div>
 
   <!-- Section 1 - Beneficios -->
   <section class="beneficios">
-    <h2>Teste sua aplicação com o Disguise</h2>
-    <h3>Facilite o uso de stubs e mocks fornecidos pelo Mountebank Server.</h3>
-    <div class="beneficios-lista">
+    <h2 data-anime="1600">Teste sua aplicação com o Disguise</h2>
+    <h3 data-anime="2000">Facilite o uso de stubs e mocks fornecidos pelo Mountebank Server.</h3>
+    <div data-anime="2400" class="beneficios-lista">
       <div class="beneficios-item">
         <img src="img/ilustra-interfaceAmigavel.svg" alt="Interface Amigável">
         <h4>Interface amigável</h4>
@@ -150,7 +151,8 @@
       </div>
     </div>
   </footer>
-
+  <script src="./js/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
