--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-  <a href="https://opus-software.github.io/disguise/imposters"><img class="logo-disguise" src="img/logo-disguise.svg" alt="Logo Disguise"></a>
+  <a href="https://opus-software.github.io/disguise/imposters" target="_blank"><img class="logo-disguise" src="img/logo-disguise.svg" alt="Logo Disguise"></a>
   <div class="welcome">
     <div class="title">
       <h1 data-anime="400">Conheça o Disguise</h1>
       <h2 data-anime="800">Uma UI para o Mountebank Server</h2>
-      <a data-anime="1200" class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
+      <a data-anime="1200" class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters" target="_blank">Utilize agora</a>
     </div>
 
     <img data-anime="1200" class="sombra-clara-4" src="img/imposters.png" alt="New Impostor">
@@ -83,38 +83,38 @@
   <section class="secao-cta">
     <h3>Conheça o Disguise</h3>
     <p>A maneira mais fácil de utilizar os recursos fornecidos pelo Mountebank Server.</p>
-    <a class="btn-2 sombra-escura-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
+    <a class="btn-2 sombra-escura-3" href="https://opus-software.github.io/disguise/imposters" target="_blank">Utilize agora</a>
   </section>
   <!-- CTA - end -->
 
   <!-- Section 4 - Como usar -->
   <section class="como-usar">
     <h2>Como usar o Disguise</h2>
-    <h3>Para utilizar o Desguise, instale o Mountebank Server seguindo os passos abaixo:</h3>
+    <h3>Para utilizar o Disguise, instale o Mountebank Server seguindo os passos abaixo:</h3>
     <div class="tutorial">
       <span>
         <h4>1</h4>
         <h5>Node.js</h5>
-        <p>Instale o Node.js Version 12. Para acessar a página de download clique aqui.</p>
+        <p>Instale o Node.js Version 12. Para acessar a página de download <a href="https://nodejs.org/en/download/" target="_blank">clique aqui.</a></p>
       </span>
       <span>
         <h4>2</h4>
         <h5>Mountebank</h5>
-        <p>Instale o Mountebank. Para acessar a documentação clique aqui.</p>
+        <p>Instale o Mountebank. Para acessar a documentação <a href="http://www.mbtest.org/docs/gettingStarted" target="_blank">clique aqui.</a></p>
       </span>
       <span>
         <h4>3</h4>
         <h5>Impostores</h5>
-        <p>Gerencie seus impostores.Com o Mountebank Server em execução, crie e administre impostores e stubs.</p>
+        <p>Gerencie seus impostores. Com o Mountebank Server em execução, crie e administre impostores e stubs.</p>
       </span>
       <span>
         <h4>4</h4>
         <h5>Logs</h5>
-        <p>Visualize os logs.Acesse com facilidade os logs gerados pelo Mountebank Server.</p>
+        <p>Visualize os logs. Acesse com facilidade os logs gerados pelo Mountebank Server.</p>
       </span>
     </div>
     <div class="botao">
-      <a class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters">Utilize agora</a>
+      <a class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters" target="_blank">Utilize agora</a>
     </div>
 
 
@@ -130,7 +130,7 @@
     </div>
 
     <p>O Disguise é Open Source! Faça parte desse projeto e nos ajude a desenvolver novas funcionalidades:</p>
-    <a class="btn sombra-clara-4" href="https://github.com/Opus-Software/disguise">GitHub</a>
+    <a class="btn sombra-clara-4" href="https://github.com/Opus-Software/disguise" target="_blank">GitHub</a>
   </section>
   <!-- Section 5 - end -->
 
@@ -139,14 +139,14 @@
     <div class="container">
       <div class="footer-creditos">
         <p>Disguise é um projeto desenvolvido por:</p>
-        <a href="https://www.opus-software.com.br/"><img src="img/logo-opus.svg" alt="Logo Opus Software"></a>
+        <a href="https://www.opus-software.com.br/" target="_blank"><img src="img/logo-opus.svg" alt="Logo Opus Software"></a>
       </div>
       <div class="footer-redes">
         <p>Siga-nos</p>
         <div class="links-redes">
-          <a href="https://www.linkedin.com/company/opus-software/"><img src="img/icons-linkedin.svg" alt="LinkedIn"></a>
-          <a href="https://www.facebook.com/Opus.Software"><img src="img/icons-facebook.svg" alt="Facebook"></a>
-          <a href="https://twitter.com/opussoft"><img src="img/icons-twitter.svg" alt="Twitter"></a>
+          <a href="https://www.linkedin.com/company/opus-software/" target="_blank"><img src="img/icons-linkedin.svg" alt="LinkedIn"></a>
+          <a href="https://www.facebook.com/Opus.Software" target="_blank"><img src="img/icons-facebook.svg" alt="Facebook"></a>
+          <a href="https://twitter.com/opussoft" target="_blank"><img src="img/icons-twitter.svg" alt="Twitter"></a>
         </div>
       </div>
     </div>
