--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <title>Disguise Landing Page</title>
+  <title>Disguise - Landing Page</title>
 </head>
 
 <body>
@@ -92,22 +92,22 @@
     <h2>Como usar o Disguise</h2>
     <h3>Para utilizar o Disguise, instale o Mountebank Server seguindo os passos abaixo:</h3>
     <div class="tutorial">
-      <span>
+      <span class="sombra-clara-3">
         <h4>1</h4>
         <h5>Node.js</h5>
         <p>Instale o Node.js Version 12. Para acessar a página de download <a href="https://nodejs.org/en/download/" target="_blank">clique aqui.</a></p>
       </span>
-      <span>
+      <span class="sombra-clara-3">
         <h4>2</h4>
         <h5>Mountebank</h5>
         <p>Instale o Mountebank. Para acessar a documentação <a href="http://www.mbtest.org/docs/gettingStarted" target="_blank">clique aqui.</a></p>
       </span>
-      <span>
+      <span class="sombra-clara-3">
         <h4>3</h4>
         <h5>Impostores</h5>
         <p>Gerencie seus impostores. Com o Mountebank Server em execução, crie e administre impostores e stubs.</p>
       </span>
-      <span>
+      <span class="sombra-clara-3">
         <h4>4</h4>
         <h5>Logs</h5>
         <p>Visualize os logs. Acesse com facilidade os logs gerados pelo Mountebank Server.</p>
