Foram inseridos os vídeos para a seção de welcome e de funcionalidade

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
       <a data-anime="1200" class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters" target="_blank">Utilize agora</a>
     </div>
 
-    <img data-anime="1200" class="sombra-clara-4" src="img/imposters.png" alt="New Impostor">
+    <video data-anime="1200" class="sombra-clara-4" autoplay loop muted>
+      <source src="img/welcome-video-2.mp4">
+      <source src="img/imposters.png">
+    </video>
+    <!-- <img data-anime="1200" class="sombra-clara-4" src="img/imposters.png" alt="New Impostor"> -->
   </div>
 
   <!-- Section 1 - Beneficios -->
@@ -74,7 +78,11 @@
           <p>Faça upload e download de arquivos de configuração JSON.</p>
         </li>
       </ul>
-      <img class="sombra-clara-4 img-funcionalidades" src="img/imposters-stubs.png" alt="">
+      <video class="sombra-clara-4 img-funcionalidades" autoplay loop muted>
+        <source src="img/funcionalidades-video-2.mp4">
+        <source src="img/imposters-stubs.png">
+      </video>
+      <!-- <img class="sombra-clara-4 img-funcionalidades" src="img/imposters-stubs.png" alt=""> -->
     </div>
   </section>
   <!-- Funcionalidades - end -->
