fix: correcao dos links para o Disguise

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 </head>
 
 <body>
-  <a href="https://opus-software.github.io/disguise/imposters" target="_blank"><img class="logo-disguise" src="img/logo-disguise.svg" alt="Logo Disguise"></a>
+  <a href="https://opus-software.github.io/disguise" target="_blank"><img class="logo-disguise" src="img/logo-disguise.svg" alt="Logo Disguise"></a>
   <div class="welcome">
     <div class="title">
       <h1 data-anime="400">Conheça o Disguise</h1>
       <h2 data-anime="800">Uma UI para o Mountebank Server</h2>
-      <a data-anime="1200" class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters" target="_blank">Utilize agora</a>
+      <a data-anime="1200" class="btn sombra-clara-3" href="https://opus-software.github.io/disguise" target="_blank">Utilize agora</a>
     </div>
 
     <video data-anime="1200" class="sombra-clara-4" autoplay loop muted>
@@ -100,7 +100,7 @@
   <section class="secao-cta">
     <h3>Conheça o Disguise</h3>
     <p>A maneira mais fácil de utilizar os recursos fornecidos pelo Mountebank Server.</p>
-    <a class="btn-2 sombra-escura-3" href="https://opus-software.github.io/disguise/imposters" target="_blank">Utilize agora</a>
+    <a class="btn-2 sombra-escura-3" href="https://opus-software.github.io/disguise" target="_blank">Utilize agora</a>
   </section>
   <!-- CTA - end -->
 
@@ -131,7 +131,7 @@
       </span>
     </div>
     <div class="botao">
-      <a class="btn sombra-clara-3" href="https://opus-software.github.io/disguise/imposters" target="_blank">Utilize agora</a>
+      <a class="btn sombra-clara-3" href="https://opus-software.github.io/disguise" target="_blank">Utilize agora</a>
     </div>
 
 
